Updated search and about

--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@ h1 {
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a class="active" href="#about">About</a></li>
+  <li><a href="search.html">Home</a></li>
+  <li><a class="active" href="about.html">About</a></li>
+  <li><a href="insert.html">Insert</a></li>
 </ul>
 
 <h1>About</h1>
