--- a/search.html
+++ b/search.html
@@ -97,8 +97,9 @@ form {
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="search.html">Home</a></li>
   <li><a href="about.html">About</a></li>
+  <li><a href="insert.html">Insert</a></li>
 </ul>
 
 <h1>IPLiN</h1>
