--- a/insert.html
+++ b/insert.html
@@ -229,7 +229,7 @@ Owner Address:
 </br>
 
 <div id="copySelect">
-</br></br>Copyright Specific:</br>
+</br></br>Copyright Specifics:</br>
 </div>
 
 <div id="regNum">
@@ -250,7 +250,7 @@ Type of Work:
 
 
 <div id="patentSelect" style="display:none">
-</br></br>Patent Specific:</br>
+</br></br>Patent Specifics:</br>
 </div>
 
 <div id="appNum" style="display:none">
@@ -275,7 +275,7 @@ Abstract:
 </div>
 
 <div id="tradeSelect" style="display:none">
-</br></br>Trademark Specific:</br>
+</br></br>Trademark Specifics:</br>
 </div>
 
 <div id="serialNum" style="display:none">
