--- a/insert.html
+++ b/insert.html
@@ -310,7 +310,7 @@ Publication Date:
 
 </br>
 </br>
-<input type="submit" value="Search">
+<input type="submit" value="Insert">
 
 </center>
 </form>
