--- a/statistics.html
+++ b/statistics.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <style>
 
 body {
 	background-color: lightblue; 
- }
- 
-/* nav bar styling begins here */
+}
+
+/* Nav bar styling begins here */
 ul {
     list-style-type: none;
     margin: 0;
@@ -40,26 +39,25 @@ li a:hover:not(.active) {
 /* nav bar styling ends here */
 
 h1 {
-	text-align: left; 
+	text-align: center; 
 	font-family: Arial, Helvetica, sans-serif; 
 }
 
-</style>
 
+</style>
 </head>
 <body>
 
 <ul>
   <li><a href="search.html">Home</a></li>
-  <li><a class="active" href="about.html">About</a></li>
+  <li><a href="about.html">About</a></li>
   <li><a href="insert.html">Insert</a></li>
   <li><a href="update.html">Update</a></li>
   <li><a href="delete.html">Delete</a></li>
-  <li><a href="statistics.html">Statistics</a></li>
+  <li><a class="active" href="statistics.html">Statistics</a></li>
 </ul>
 
-<h1>About</h1>
-<hr>
+<h1>Statistics</h1>
 
 </body>
 </html>
