--- a/search.html
+++ b/search.html
@@ -103,6 +103,9 @@ form {
   <li><a class="active" href="search.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="insert.html">Insert</a></li>
+  <li><a href="update.html">Update</a></li>
+  <li><a href="delete.html">Delete</a></li>
+  <li><a href="statistics.html">Statistics</a></li>
 </ul>
 
 <h1>IPLiN</h1>
