--- a/update.html
+++ b/update.html
@@ -43,6 +43,17 @@ h1 {
 	font-family: Arial, Helvetica, sans-serif; 
 }
 
+input[type="submit"] {
+	background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
 
 </style>
 </head>
@@ -58,6 +69,29 @@ h1 {
 </ul>
 
 <h1>Update Record</h1>
+
+<form action="update_page.php">
+<center>
+<table border="0">
+	<tr>
+		<td><label for="table">Type</label></td>
+		<td><select id="table" name="table">
+				<option value="copyright">Copyright</option>
+				<option value="trademark">Trademark</option>
+				<option value="patent">Patent</option>
+				<option value="youtubevid">YouTube Video</option>
+			</select></td>
+	</tr>
+	<tr>
+		<td><label for="url">URL:</label></td>
+		<td><input type="text" id="url" name="url" /></td>
+	</tr>
+</table>
+</br>
+</br>
+<input type="submit" value="Find">
+</center>
+</form>
 
 </body>
 </html>
