--- a/delete.html
+++ b/delete.html
@@ -42,7 +42,7 @@
 
     <h1>Delete Record</h1>
 
-    <form name="theForm" action="insert_page.php" onsubmit="return required()" style="text-align:left">
+    <form name="theForm" action="delete_page.php" onsubmit="return required()" style="text-align:left">
         <center>
             Would you like to delete information for an <b>Owner</b>, an <b>IP</b>, or a <b>License</b>?
             <br/>
