finished update, working on delete

--- a/delete.html
+++ b/delete.html
@@ -1,108 +1,137 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
-	<title>IPLiN: Delete</title>
-	<link rel="stylesheet" type="text/css" href="project.css">
+
+<!-- JavaScript for dynamically populating second dropdown box -->
+<script type="text/javascript">
+	function populate(ts,fs){
+		var ts = document.getElementById(ts);
+		var fs = document.getElementById(fs);
+		fs.innerHTML = "";
+		if(ts.value == "ip"){
+			var optionArr = ["any|Any","url|URL", "Title|Title","IP_ownerName|Owner"];
+		} 
+		else if(ts.value == "copyright"){
+			var optionArr = ["any|Any","url|URL","Title|Title","IP_ownerName|Owner","registrationNum|Registration #","registrationDate|Registration Date","publicationDate|Publication Date","type|Type of Work"];
+		}
+		else if(ts.value == "trademark"){
+			var optionArr = ["any|Any","url|URL","Title|Title","IP_ownerName|Owner","serialNum|Serial #","registNum|Registration #","status|Status","filingDate|Filing Date"];
+		}
+		else if(ts.value == "patent"){
+			var optionArr = ["any|Any","url|URL","Title|Title","IP_ownerName|Owner","appNum|Application #","patentNum|Patent #","filingDate|Filing Date","issueDate|Issue Date","abstract|Abstract"];
+		}
+		else if(ts.value == "youtubevideo"){
+			var optionArr = ["any|Any","url|URL","Title|Title","IP_ownerName|Owner","publicationDate|Publication Date"]; 
+		}
+		for(var option in optionArr){
+			var pair = optionArr[option].split("|");
+			var newOption = document.createElement("option");
+			newOption.value = pair[0];
+			newOption.innerHTML = pair[1];
+			fs.options.add(newOption);
+		}
+	}
+</script>
+
+<style>
+
+body {
+	background-color: lightblue; 
+}
+
+/* Nav bar styling begins here */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+/* nav bar styling ends here */
+
+h1 {
+	text-align: center; 
+	font-family: Arial, Helvetica, sans-serif; 
+}
+
+input[type="submit"] {
+	background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+</style>
 </head>
 <body>
 
-    <script>
-            function ChangeDisplay() {
-                var deleteType = document.getElementById("DeleteType");
-                var ownerDiv = document.getElementById("ownerDiv");
-                var ipDiv = document.getElementById("ipDiv");
-                var licenseDiv = document.getElementById("licenseDiv");
-                
-                if ( deleteType.value == "owner" ) {
-                    ipDiv.style.display = "none";
-                    licenseDiv.style.display = "none";
-                    ownerDiv.style.display = "block";
-                }
-                else if ( deleteType.value == "ip" ) {
-                    ownerDiv.style.display = "none";
-                    licenseDiv.style.display = "none";
-                    ipDiv.style.display = "block";
-                }
-                else if ( deleteType.value == "license" ) {
-                    ownerDiv.style.display = "none";
-                    ipDiv.style.display = "none";
-                    licenseDiv.style.display = "block";
-                }
-            }
-    </script>
+<ul>
+  <li><a href="search.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="insert.html">Insert</a></li>
+  <li><a href="update.html">Update</a></li>
+  <li><a class="active" href="delete.html">Delete</a></li>
+  <li><a href="statistics.html">Statistics</a></li>
+</ul>
 
-    <ul>
-        <li><a href="search.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="insert.html">Insert</a></li>
-        <li><a href="update.html">Update</a></li>
-        <li><a class="active" href="delete.html">Delete</a></li>
-        <li><a href="statistics.html">Statistics</a></li>
-    </ul>
+<h1>Delete Record</h1>
 
-    <h1>Delete Record</h1>
-
-    <form name="theForm" action="delete_page.php" onsubmit="return required()" style="text-align:left">
-        <center>
-            Would you like to delete information for an <b>Owner</b>, an <b>IP</b>, or a <b>License</b>?
-            <br/>
-            <br/>
-
-            <select name="TypeToDelete" id="DeleteType" onchange="ChangeDisplay()" title="Pick One">
-                <option selected value=""></option>
-                <option value="owner"> Owner </option>
-                <option value="ip"> IP </option>
-                <option value="license"> License </option>
-            </select>
-            <br/>
-            <br/>
-            <br/>
-
-            <div id="ownerDiv" visibility: hidden>
-                Please pick the Owners you would like to delete from the database.
-                <br/><br/>
-
-                <table border="1">
-                    <tr>
-                        <td></td>
-                        <td>Owner Name</td> 
-                        <td>Owner Address</td> 
-                    </tr>
-                </table>
-            </div>
-
-            <div id="ipDiv" visibility: hidden>
-                Please pick the IPs you would like to delete from the database.
-                <br/><br/>
-
-                <table border="1">
-                    <tr>
-                        <td></td>
-                        <td>url</td> 
-                        <td>Title</td> 
-                    </tr>
-                </table>
-            </div>
-
-            <div id="licenseDiv" visibility: hidden>
-                Please pick the IPs you would like to delete from the database.
-                <br/><br/>
-
-                <table border="1">
-                    <tr>
-                        <td></td>
-                        <td>Licensee</td> 
-                        <td>url</td> 
-                        <td>Title</td>
-                    </tr>
-                </table>
-            </div>
-
-
-
-
-        </center>
-    </form>
+<form action="delete_page.php">
+<center>
+<table border="0">
+	<tr>
+		<td><label for="table">Delete From:</label></td>
+		<td><select id="table" name="table" onchange="populate(this.id, 'column')">
+				<option value="ip">All</option>
+				<option value="copyright">Copyright</option>
+				<option value="trademark">Trademark</option>
+				<option value="patent">Patent</option>
+				<option value="youtubevideo">YouTube Video</option>
+			</select></td>
+	</tr>
+	<tr>
+		<td><label for="keyword">Records with Value:</label></td>
+		<td><input type="text" id="keyword" name="keyword" /></td>
+	</tr>
+	<tr>
+		<td><label value="column">In Field:</label></td>
+		<td><select name="column" id="column">
+			<option value="any">Any</option>
+			<option value="url">URL</option>
+			<option value="Title">Title</option>
+			<option value="IP_ownerName">Owner</option>
+		</select></td>
+	</tr>
+</table>
+</br>
+</br>
+<input type="submit" value="Delete">
+</center>
+</form>
 
 </body>
 </html>
