--- a/about.html
+++ b/about.html
@@ -58,8 +58,16 @@ h1 {
   <li><a href="statistics.html">Statistics</a></li>
 </ul>
 
-<h1>About</h1>
-<hr>
+<center>
+        <h1>IPLiN</h1>
+        <h2>Intellectual Property Licensing Network</h2>
+        <hr>
+    
+    <p>IPLiN is a platform that is short for <b>Intellectual Property Licensing Network</b></p>
+    <p>IPLiN was started by FSU students Riley Garrison, Matthew Klopfenstein, and Alexy Ostrovidov</p>
+    <p>What we hope to accomplish with IPLiN is to provide a platform for users to view Intellectual Property and Licenses.</p>
+    <p>Currently, IPLiN allows users to search, add to, delete from, and update records the database.</p>
+    </center>
 
 </body>
 </html>
