Changed about, insert, insert_page. Added scraper.js

--- a/insert.html
+++ b/insert.html
@@ -274,6 +274,7 @@ Type: <select name="copyrightType" id="copyType" onchange="ChangeDisplay()">
 	<tr>
 		<td><label for="ownerName">*Owner:</label></td> 
 		<td><input type="text" id="ownerName" name="ownerName" /></td> 
+		<td><input type="submit" id="ytAuto" name="ytAuto" value="Autofill" visibility:hidden/></td>
 	</tr>	
 	<tr>
 		<td><label for="ownerAddress">Owner Address:</label></td>
